[package]
name = "barnsley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
enum_dispatch = "0.3.12"
image = "0.24.6"
ndarray = "0.15.6"
num = { version = "0.4", features = ["serde"]}
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
strum = "0.25.0"
strum_macros = "0.25.1"
toml = "0.7.6"

