[package]
name = "barnsley"
version = "0.2.3"
edition = "2021"
authors = ["Marcus Hughes <hughes.jmb@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "iterated function system image generator"
documentation = "https://docs.rs/barnsley/latest/"
repository = "https://github.com/jmbhughes/barnsley"
keywords = ["image-generation", "iterated-function", "ifs", "mathematical-images"]
categories = ["mathematics", "multimedia::images", "rendering"]
readme = "README.md"
exclude = ["examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
enum_dispatch = "0.3.12"
image = "0.25.0"
ndarray = "0.15.6"
num = { version = "0.4", features = ["serde"]}
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
strum = "0.26.1"
strum_macros = "0.26.1"
toml = "0.8.6"
